contour/ingress-argocd.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dev-ingress
  namespace: argocd
  annotations:
    projectcontour.io/ingress.class: "dev"
    #kubernetes.io/ingress.class: "dx-prod"
    ingress.kubernetes.io/force-ssl-redirect: "false"
    #ingress.kubernetes.io/ssl-passthrough: "true"
    #kubernetes.io/ingress.allow-http: "true"
    #kubernetes.io/tls-acme: "true"
    #ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: argocd-server
          servicePort: 80 
    host: argocd.intuaition.com
